endpoint part-1