@@ -1,7 +1,6 @@
 package br.com.gerenciador_do_trabalho_api.service.user;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -9,8 +8,6 @@ import org.springframework.stereotype.Service;
 import br.com.gerenciador_do_trabalho_api.dto.ApiResponse;
 import br.com.gerenciador_do_trabalho_api.dto.user.UserRegistrationDTO;
 import br.com.gerenciador_do_trabalho_api.dto.user.UserResponseDTO;
-import br.com.gerenciador_do_trabalho_api.entity.User;
-import br.com.gerenciador_do_trabalho_api.exceptions.UserNotExistsException;
 import br.com.gerenciador_do_trabalho_api.exceptions.UsernameAlreadyExistsException;
 import br.com.gerenciador_do_trabalho_api.mapper.UserMapper;
 import br.com.gerenciador_do_trabalho_api.repository.UserRepository;
@@ -41,17 +38,11 @@ public class UserService implements IUserService {
 
     @Override
     public ApiResponse<UserResponseDTO> getUserById(Long id) {
-       
-        User user = this.userRepository.getReferenceById(id);
-
-        if(user != null){
-            throw new UserNotExistsException("Usuário não encontrado");
-        }
 
         return new ApiResponse<UserResponseDTO>(
             ApiResponse.ResponseStatusType.SUCCESS,
             HttpStatus.OK,
-            mapper.toUserResponseDTO(user),
+            mapper.toUserResponseDTO(this.userRepository.getReferenceById(id)),
             "Usuário retornado com sucesso");
     }
 
@@ -61,7 +52,7 @@ public class UserService implements IUserService {
          * Mapeando a lista de usuarios
          */
         List<UserResponseDTO> users = this.userRepository.findAll().stream().map(mapper::toUserResponseDTO)
-        .collect(Collectors.toList());
+        .toList();
 
         return new ApiResponse<List<UserResponseDTO>>(
             ApiResponse.ResponseStatusType.SUCCESS,
